--- a/crash-cars.html
+++ b/crash-cars.html
@@ -71,7 +71,7 @@
             <p>Crash Nitro Kart is a fast-paced racing video game featuring characters from the Crash Bandicoot series. Players can race against each other or against computer-controlled opponents on various tracks filled with obstacles and power-ups. The game offers colorful graphics, exciting gameplay, and a variety of game modes, making it enjoyable for both casual and competitive gamers.</p>
             <div class="download-buttons">
                 <a class="torrent-button" href="download-link-torrent.html">Download Torrent</a>
-                <a href="https://archive.org/download/1_20230504_20230504_0641/Crash%20Bandicoot%20-%20Nitro%20Kart%20%5BPS2%20Classics%5D%20%5BSLUS20649%5D.pkg">Download PKG</a>
+                <a href="http://archive.org/download/1_20230504_20230504_0641/Crash%20Bandicoot%20-%20Nitro%20Kart%20%5BPS2%20Classics%5D%20%5BSLUS20649%5D.pkg">Download PKG</a>
             </div>
         </div>
         <div class="game-image">
