--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>موقع الألعاب</title>
+    <title>ar games</title>
     <link rel="stylesheet" href="index.css">
     <script src="index.js" defer></script>
 </head>
@@ -23,6 +23,9 @@
             <option value="sony3">PS3 GAME</option>
             <option value="sony2">PS2 GAME</option>
             <option value="sony1">PS1 GAME</option>
+            <option value="APPS">APPS</option>
+            <option value="FIx">FIx</option>
+
         </select>
     </div>
     <div class="search">
