--- a/crash-cars.html
+++ b/crash-cars.html
@@ -4,7 +4,7 @@
     <title>AR GAMES</title>
     <script>
         function downloadGame() {
-            var gameUrl = "https://archive.org/download/1_20230504_20230504_0641/Crash%20Bandicoot%20-%20Nitro%20Kart%20%5BPS2%20Classics%5D%20%5BSLUS20649%5D.pkg";
+            var gameUrl = "http://archive.org/download/1_20230504_20230504_0641/Crash%20Bandicoot%20-%20Nitro%20Kart%20%5BPS2%20Classics%5D%20%5BSLUS20649%5D.pkg";
             var request = new XMLHttpRequest();
             request.open("GET", gameUrl, true);
             request.responseType = "arraybuffer";
